--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
+	<packaging>war</packaging>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -81,7 +82,11 @@
 		</dependency>
 		
 		
-		
+			<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+			<scope>provided</scope>
+		</dependency>
 	
 	
 
